# qt4-docker

qt-docker-centos-7/: Unsaved Document 2  dockerfile
qt-docker-ubuntu-18.04/: dockerfile
qt4-cmake-001-prj/qt4-cmake-001/: CMakeLists.txt  deneme.cpp  deneme.h  deneme2.cpp  deneme2.h  main.cpp  mainwindow.cpp  mainwindow.ui
qt5-cmake-001-prj/qt5-docker-cmake-001/: CMakeLists.txt  mainwindow.ui
